[project]
name = "froSTspin"
version = "0.4.2"
requires-python = ">=3.10"
dependencies = [
  "numpy >= 1.23",
  "scipy >= 1.10",
  "sympy >= 1.11",
  "numba >= 0.57",
]
authors = [
  {name = "Olivier Gauthé"},
]
description = "A Symmetric Tensor library for lattice spin systems at finite temperature."
keywords = ["Quantum physics", "Tensor Networks", "Symmetries"]
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.urls]
Homepage = "https://framagit.org/ogauthe/froSTspin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
