[project]
name = "froSTspin"
version = "0.4.2"
requires-python = ">=3.10"
dependencies = [
  "numpy >= 1.23",
  "scipy >= 1.10",
  "sympy >= 1.11",
  "numba >= 0.57",
]
authors = [
  {name = "Olivier Gauthé"},
]
description = "A Symmetric Tensor library for lattice spin systems at finite temperature."
keywords = ["Quantum physics", "Tensor Networks", "Symmetries"]
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.urls]
Homepage = "https://framagit.org/ogauthe/froSTspin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
# keep Black conventions
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "UP",
    "A",
    "C",
    "EXE",
    "ISC",
    "ICN",
    "PIE",
    "Q",
    "RSE",
    "TID",
    "FLY",
    "NPY",
    "N",
    "RET",
    "ARG001",
    "ARG005",
    "TRY",
    "SIM",
    "RUF",
    "FBT",
]
ignore = [
    "C901",  # too demanding
    "N801",  # prefer keeping SU2_SymmetricTensor
    "N802",  # prefer keeping toU1
    "N803",  # prefer keeping D
    "N806",  # prefer keeping D
    "N816",  # prefer keeping hU1
    "N999",  # froSTspin
    "RET504",  # prefer to assign
    "TRY003",  # simpler with explicit message
    "RUF012",  # not using type annotation
]
