[project]
name = "frostspin"
requires-python = ">=3.10"
dependencies = [
  "numpy >= 1.23",
  "scipy >= 1.10",
  "sympy >= 1.11",
  "numba >= 0.57",
]
authors = [
  {name = "Olivier Gauthé"},
]
description = "A Symmetric Tensor library for lattice spin systems at finite temperature."
keywords = ["Quantum physics", "Tensor Networks", "Symmetries"]
readme = "README.md"
license = {file = "LICENSE.txt"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ogauthe/frostspin"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "frostspin.__version__"}

[tool.setuptools.package-data]
mypkg = ["*.json"]

[tool.ruff]
# keep Black conventions
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "UP",
    "A",
    "C",
    "EXE",
    "ISC",
    "ICN",
    "PIE",
    "Q",
    "RSE",
    "TID",
    "FLY",
    "NPY",
    "N",
    "RET",
    "ARG",
    "TRY",
    "SIM",
    "RUF",
    "FBT",
    "I",
    "PERF",
    "SLF",
    "INP",
    "PL",
    "B",
    "PGH",
    "FURB",
]
ignore = [
    "C901",  # too demanding
    "N801",  # prefer keeping SU2_SymmetricTensor
    "N802",  # prefer keeping toU1
    "N803",  # prefer keeping D
    "N806",  # prefer keeping D
    "N816",  # prefer keeping hU1
    "TRY003",  # simpler with explicit message
    "RUF012",  # not using type annotation
    "PLR0912", # too pedantic
    "PLR0913", # too pedantic
    "PLR0915", # too pedantic
    "PLR2004", # too pedantic
]
